5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4074/executions/1578_1332.log
== TEST (2019-03-12 14:58:05) 
-- CODE:
aresta = 5
area = 3
 
print(round(area, 4))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:21:52) 
-- CODE:
aresta = a
area = A
=
3
2
√
3
a
2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    =
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:22:03) 
-- CODE:
aresta = a
area = A

3
2
√
3
a
2
 
print(round(area, 4))
-- EXECUTION TIME:
0.206155
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 6
    \u221a
    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:36:49) 
-- CODE:
aresta = 
area = 
 
print(round(3/2*3*5**2, 4))
-- EXECUTION TIME:
0.193752
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 1
    aresta = 
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:41:11) 
-- CODE:
aresta = 5
area = 
 
print(round(3/2*3*5**2, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:42:22) 
-- CODE:
aresta = 5
print("area = round(3/2*3*5**2, 4))
 
print(round(3/2*3*5**2, 4))
-- ERROR:
File "XXXX", line 2
    print("area = round(3/2*3*5**2, 4))
                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 15:42:47) 
-- CODE:
aresta = 5
print(round(3/2*3*5**2, 4))
 
print(round(3/2*3*5**2, 4))
-- OUTPUT:
112.5
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:07:21) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(3/2*3**0.5*5**2, 4))
-- EXECUTION TIME:
0.153109
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
